Rename image.go to mapgenerator.go. Fix map alignment.

--- a/static/style.css
+++ b/static/style.css
@@ -293,6 +293,9 @@ table th, table td {
 figure img {
     display: block;
     margin: 0 auto;
+    width: 100%;
+    height: auto;
+    max-width: 400px;
 }
 figure figcaption {
     text-align: center;
